# x2503-codegen

./: .env.template  .gitignore  .prototools  README.md  main.py  moon.yml  pyproject.toml
.moon/: toolchain.yml  workspace.yml
etc/composes/: dev.yml
etc/dockerfiles/: kusto-emulator.Dockerfile
libs/: db_consts.py  kusto_client.py  langchain_state.py  paths.py  settings.py
libs/langchain_edges/: route_tools.py
libs/langchain_tools/: kql.py
notebooks/: codegen.py  migrate_db.py  seed_data.py
